--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    @apply bg-gray-100 font-sans;
+}
+
+.card-back-content::before {
+    content: '?';
+    @apply text-4xl text-gray-200 font-bold opacity-80;
+}
